started adding some basic styling.
basic right now will add animation and more slick styling at weekend.

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,1 @@
-# add connection string
-# MONGODB_URL=""
+MONGODB_URL=mongodb+srv://dataSpot42:S1dcupMongo@dataspot.mh3m3qh.mongodb.net/?retryWrites=true&w=majority
